# Change Log
The format is based on [Keep a Changelog](http://keepachangelog.com/)

## [Unreleased]

## [v0.1.43] - Sat, 24 Oct 2020 14:26:16 +0900
### Changed
- 결제 타이밍 문제해결을 위해 결제확인 wait 시간을 없애고,
  결제 통보 후에 1초 대기함 (#270)

## [v0.1.42] - Sun, 11 Oct 2020 18:39:08 +0900
### Changed
- 정책변경으로 배송관련 안내문구 삭제 (#268)

## [v0.1.41] - Mon, 14 Sep 2020 18:12:57 +0900
### Changed
- 윗배둘레 입력 값 설명 변경 (#254)
- 2020 추석연휴 기간동안 택배 발송 불가 (09-30 ~ 10-08) (266)

## [v0.1.40] - Sat, 29 Aug 2020 13:08:27 +0900
### Changed
- 할인 전에 주문서 상세 정보를 로그로 기록함 (#263)

### Fixed
- 사용자 입력에 따라 추천 사이즈표시 (#254)

## [v0.1.39] - Mon, 17 Aug 2020 11:51:54 +0900
### Changed
- 신체 치수 필수입력 변경; 키/몸무게/가슴둘레 (#254)

## [v0.1.38] - Sun, 16 Aug 2020 23:26:19 +0900
### Changed
- 치수측정 가이드 변경 (#260)
- 기성복 사이즈를 입력받음 (#254)
- 사이즈 참조표 변경 (#254)
- 치수측정에서 유효하지 않은 컨텐츠 삭제 (#254)
- 치수측정 페이지에 열린옷장의 추천 사이즈 표시 (#254)
- 주문서에 해당하는 추천사이즈 표시 (#254)
### Changed
- 2020-08-14 ~ 2020-08-20 의류착용일 disabled (#258)

## [v0.1.36] - Sat, 11 Jul 2020 23:47:29 +0900
### Changed
- requires OpenCloset-Plugin-Helper v0.0.29 (#257)

## [v0.1.35] - Mon, 13 Apr 2020 20:49:20 +0900
### Changed
- 2020 4,5월 연휴기간 의류착용일 disable (#251)

## [v0.1.34] - Mon, 09 Mar 2020 20:50:52 +0900
### Changed
- welcome 화면 개편 (#247)

## [v0.1.33] - Sat, 07 Mar 2020 16:03:48 +0900
### Changed
- welcome 화면 개편 (#242)

## [v0.1.32] - Thu, 20 Feb 2020 21:20:21 +0900
### Changed
- 이용약관 업데이트 (opencloset/opencloset#1661)
- 배송관련 안내 문구 업데이트 (#244)

## [v0.1.31] - Tue, 18 Feb 2020 21:12:16 +0900
### Changed
- 의류추천 단계 제거 (#242)

## [v0.1.30] - Thu, 16 Jan 2020 23:16:31 +0900
### Changed
- 2020 설날연휴기간에 의류착용일을 선택하지 못하도록 함 (#240)

## [v0.1.29] - Fri, 22 Nov 2019 00:09:35 +0900

### Fixed
- 주문서와 실제 대여 의류정보가 달라도 배송준비중으로 변경가능토록 함 (#191)

## [v0.1.28] - Mon, 04 Nov 2019 21:25:45 +0900

### Changed
- 여성의 대여품목에 팬츠 추가 (#236)

## [v0.1.27] - Sat, 31 Aug 2019 15:01:36 +0900

### Changed
- 2019 추석연휴기간에 의류착용일을 선택하지 못하도록 함 (#235)

## [v0.1.26] - Wed, 12 Jun 2019 20:02:25 +0900

### Changed