@@ -2,6 +2,8 @@
 The format is based on [Keep a Changelog](http://keepachangelog.com/)
 
 ## [Unreleased]
+### Changed
+- iamport 로 부터 결제수단이 변경되어도 오류로 처리하지 않고 허용함 (#270)
 
 ## [v0.1.43] - Sat, 24 Oct 2020 14:26:16 +0900
 ### Changed
